# heyholetsgo

./: .gitignore  README.md
bench/: README.md
bench/app_go/: main.go
bench/app_node/: app.js  package-lock.json  package.json
bench/app_php/: app.php
bench/app_python/: app.py  pyproject.toml
bench/app_rust/: Cargo.toml
bench/app_rust/src/: main.rs
cross_compiling/: Makefile  README.md
pokemon/: README.md
pokemon/concorrente/: main.go
pokemon/serial/: main.go
starwars/: README.md
starwars/concorrente/: main.go
starwars/serial/: main.go
web/: main.go
